--- a/Exercises/nbproject/project.properties
+++ b/Exercises/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Exercises
-main.class=exercises.Exercises
+main.class=exercise1.Planet
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
